# pardus-about

./: .gitignore  README.md  meson.build  pardus-about.py  setup.py  tr.org.pardus.about-hardware.desktop  tr.org.pardus.pkexec.pardus-about.policy
css/: about.css
debian/: changelog  control  meson.build
po/: LINGUAS  es.po  files  pardus-about.pot  pt.po  tr.po
polkit/: meson.build  tr.org.pardus.about.rules  tr.org.pardus.pkexec.pardus-about.policy
src/: Main.py  MainWindow.py  cli.py  utils.py
src/util/: ComputerManager.py  MonitorManager.py  PardusInfoManager.py  SerioManager.py  SystemReportManager.py  USBManager.py  desktop.py  network.py
ui/: MainWindow.glade
